--- a/RailwayTicketBooking/Web.config
+++ b/RailwayTicketBooking/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-RailwayTicketBooking-20150512233059;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-RailwayTicketBooking-20150512233059.mdf" />
-  </connectionStrings>
+  <add name="Railway" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=Diplom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
