--- a/RailwayTicketBooking/RailwayTicketBooking.csproj
+++ b/RailwayTicketBooking/RailwayTicketBooking.csproj
@@ -127,14 +127,17 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountManager.cs" />
+    <Compile Include="Models\Helpers\AccountManager.cs" />
     <Compile Include="Models\ErrorMessageProvider.cs" />
     <Compile Include="Models\LoggedUser.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\BusinessObjects\Message.cs" />
     <Compile Include="Models\RegistrationData.cs" />
+    <Compile Include="Models\Helpers\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Railway.Context.cs">
       <AutoGen>True</AutoGen>
@@ -267,6 +270,7 @@
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Registration.cshtml" />
+    <Content Include="Views\Message\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
