--- a/RailwayTicketBooking/Web.config
+++ b/RailwayTicketBooking/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-RailwayTicketBooking-20150512233059;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-RailwayTicketBooking-20150512233059.mdf" />
-  <add name="Railway" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=Diplom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="Railway" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="RW" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GEAR\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,7 +18,7 @@
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
