Fixed Login and added user roles
Need auth

--- a/RailwayTicketBooking/Web.config
+++ b/RailwayTicketBooking/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="Railway" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="RW" connectionString="metadata=res://*/Railway.csdl|res://*/Railway.ssdl|res://*/Railway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GEAR\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    
+  <add name="RW" connectionString="metadata=res://*/RW.csdl|res://*/RW.ssdl|res://*/RW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -18,7 +20,11 @@
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
@@ -43,9 +49,9 @@
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
+    <roleManager enabled="true" defaultProvider="UserRoleProvider">
       <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        <add name="UserRoleProvider" type="RailwayTicketBooking.Providers.UserRoleProvider" />
       </providers>
     </roleManager>
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
