--- a/RailwayTicketBooking/Web.config
+++ b/RailwayTicketBooking/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     
-  <add name="RW" connectionString="metadata=res://*/RW.csdl|res://*/RW.ssdl|res://*/RW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=520-KROHMAL\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="RW" connectionString="metadata=res://*/RW.csdl|res://*/RW.ssdl|res://*/RW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GEAR\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
