--- a/RailwayTicketBooking/Web.config
+++ b/RailwayTicketBooking/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-  <add name="RW" connectionString="metadata=res://*/RW.csdl|res://*/RW.ssdl|res://*/RW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GEAR\SQLEXPRESS;initial catalog=RW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="RW" connectionString="metadata=res://*/RW.csdl|res://*/RW.ssdl|res://*/RW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLEXPRESS;initial catalog=Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
